--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,5 +8,8 @@
 		<br>
 		<a href="mailto:superrentalsrep@emberjs.com">superrentalsrep@emberjs.com</a>
 	</p>
+	{{#link-to 'about' class=button}}
+		About
+	{{/link-to}}
 </div>
 {{outlet}}
