Add action to component template to toggle image size

--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -1,6 +1,6 @@
 {{yield}}
 <article class="listing">
-	<a href="" class="image {{if isWide "wide"}}">
+	<a {{action "toggleImageSize"}} href="" class="image {{if isWide "wide"}}">
 		<img src="{{rental.image}}" alt="">
 		<small>View Larger</small>
 	</a>
