--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -9,7 +9,7 @@
 		<span>Owner:</span> {{rental.owner}}
 	</div>
 	<div class="detail type">
-		<span>Type:</span> {{rental.type}}
+		<span>Type:</span> {{rentalPropertyType rental.type}} - {{rental.type}}
 	</div>
 	<div class="detail location">
 		<span>Location:</span> {{rental.city}}
